# desafio-contact-pro

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_LOG.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_lead_conversation_message.py  0002_lead_bot_paused.py  0003_message_processed_at.py
backend/app/: main.py
backend/app/api/: CLAUDE.md  deps.py  security.py
backend/app/api/routes/: conversations.py  health.py  leads.py  webhooks.py  whatsapp.py
backend/app/core/: config.py  logging.py  redis.py  socketio.py
backend/app/db/: base.py  session.py
backend/app/knowledge_base/: contact_pro.md
backend/app/models/: CLAUDE.md  conversation.py  enums.py  lead.py  message.py
backend/app/schemas/: CLAUDE.md  conversation.py  lead.py
backend/app/scripts/: wait_for_db.py
backend/app/services/: CLAUDE.md  conversation_orchestrator.py  message_buffer.py
backend/app/services/ai/: CLAUDE.md  anthropic_provider.py  base.py  factory.py  openai_provider.py  prompts.py
backend/app/services/transcription/: CLAUDE.md  openai_stt.py
backend/app/services/tts/: CLAUDE.md  openai_tts.py
backend/app/services/vision/: CLAUDE.md  multimodal.py
backend/app/services/whatsapp/: CLAUDE.md  evolution_client.py  payload.py
backend/tests/: conftest.py
backend/tests/api/: test_conversations.py  test_leads.py  test_messages.py
backend/tests/services/: test_orchestrator_pause.py
(+83 files in other folders)
